--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@font-face { font-family: 'Cafe24Oneprettynight'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff') format('woff'); font-weight: normal; font-style: normal; }
 
 @font-face {
     font-family: 'MapoFlowerIsland';
@@ -22,6 +21,14 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+    font-family: 'GyeonggiBatang';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/GyeonggiBatang.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+            
 		   
 .menu_box{
 	width: 100%;
@@ -35,19 +42,57 @@
 .menu_box ul {
 	float: right;
 }
-
 .menu_box li{
 	float: left;
 	margin-top: 38px;
 	margin-right: 60px;
 }
-
 .menu_box li a{
 	text-decoration:none; 
 	color:#222; 
 	font-size:16px;
 	font-family: 'S-CoreDream-2ExtraLight';
 }
+/* web menu */
+
+.mobile-container {
+    margin: auto;
+    color: white;
+    border-radius: 10px;
+  }
+  
+  .topnav {
+    height: 50px;
+    overflow: hidden;
+    background-color: rgb(900, 900, 900, 0.5);
+    position: relative;
+  }
+  
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  .topnav a {
+	font-family: 'S-CoreDream-2ExtraLight';
+    float: left;
+    color: #444;
+    padding: 15px 15px;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  
+  .topnav a.icon {
+    float: right;
+  }
+  
+  #myLinks a:hover {
+    height: 50px;
+    background-color: #ddd;
+    color: black;
+  }
+/* mobile menu */
+
+
 .logo {
 	float: left;
 }
@@ -57,9 +102,13 @@
 	width: 120px;
 }
 
-.btn {
+.menu-btn{
+    font-size: 30px;
+    font-weight: bold;
+	margin-left: 10px;
 	display: none;
 }
+
 .fixed{
 	background:rgba(255, 255, 255, 0.5); 
 	transition:all 0.5s ease-in-out; 
@@ -149,7 +198,7 @@
 
 #section03 {
 	width: 100%;
-	padding-bottom: 150px;
+	padding-bottom: 90px;
 	background:#f0f0f0;
 }
 
@@ -309,7 +358,13 @@
 	-ms-flex-align: center;
 	-webkit-align-items: center;
 	align-items: center;
-  }
+}
+.swiper-button-next {
+	color: #548b72;
+}
+.swiper-button-prev {
+	color: #548b72;
+}
 /* section 04 end */
 
 #section05{
@@ -341,24 +396,63 @@
 .customoverlay .title {display:block;text-align:center;background:#fff;margin-right:35px;padding:10px 15px;font-size:14px;font-weight:bold;}
 .customoverlay:after {content:'';position:absolute;margin-left:-12px;left:50%;bottom:-12px;width:22px;height:12px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
 
-.sec05-txt {
-	text-align: center;
-	padding-bottom: 30px;
-}
-.map_txt h3 {
-	color: #000;
-	font-size:23px;
-	font-weight: bold;
-	font-family: 'S-CoreDream-2ExtraLight';
-	margin-top: 40px;
-}
+.tab {
+	width: 61%;
+	overflow: hidden;
+	border: 1px solid #222;
+	background-color: #f1f1f1;
+	margin: 0 auto;
 
-.map_txt p {
+  }
+  
+.tab-menu {
+	padding: 22px 0 22px 0;
+}
+  /* Style the buttons inside the tab */
+  .tab button {
+	background-color: inherit;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	transition: 0.3s;
+	font-size: 17px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+	background-color:#0d7445;
+	color: #fff;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+	background-color:#08462a;
+	color: #fff;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+	display: none;
+	padding: 6px 12px;
+	border: 1px solid #222;
+	border-top: none;
+	width: 59.75%;
+	margin: 0 auto;
+  }
+.tabcontent h3 {
+	font-family: 'S-CoreDream-4Regular';
+	font-size: 20px;
+	padding: 10px 0 10px 0;
+}
+.tabcontent2 {
 	font-family: 'S-CoreDream-2ExtraLight';
-	font-size: 16px;
-	color: #222;
-	margin-top: 30px;
-	line-height: 30px;
+	font-size: 17px;
+	padding: 3px 0 3px 0;
+}
+.tablinks {
+	width: 50%;
 }
 /* section 05 end */
 
@@ -382,501 +476,49 @@
 	margin-left: 720px;
 }
 .copyright {
-    font-size: 15px;
-	color: #444;
+	font-family: 'S-CoreDream-2ExtraLight';
+    font-size: 16px;
+	color: #222;
 	padding-bottom: 20px;
 	margin-left: 720px;
 }
+
+.place {
+	font-weight: bold;
+	font-size: 22px;
+	padding-bottom: 10px;
+	font-family: 'S-CoreDream-4Regular';
+}
 .company-info li {
-	font-size: 15px;
-	color: #555;
-	padding-bottom: 5px;
+	font-family: 'S-CoreDream-2ExtraLight';
+	font-size: 16px;
+	color: #444;
 }
 /* footer end */
 
-@media (max-width:1550px) {
-	#section01 {
-		width: 100%;
-	}
-	.menu_box {
-		width: 100%;
-	}
-	/* section01 end */
-
-	#section02 {
-		width: 100%;
-	}
-	/* section02 end */
-
-	#section03 {
-		width: 100%;
-	}
-	.introbox1 {
-		margin-left: 150px;
-	}
-	.introbox2 {
-		margin-left: 150px;
-	}
-}
-
-@media (max-width:1350px) {
-	#section01 {
-		width: 100%;
-	}
-	.menu_box {
-		width: 100%;
-	}
-	/* section01 end */
-
-	#section02 {
-		width: 100%;
-	}
-	.sec02-img {
-		padding-left: 5%;
-	}
-	.col-warp {
-		width: 95%;
-	}
-	/* section02 end */
-
-	#section03 {
-		width: 100%;
-	}
-	.introbox1 {
-		margin-left: 60px;
-	}
-	.introbox2 {
-		margin-left: 60px;
-	}
-	/* section03 end */
-	#section04 {
-		width: 100%;
-	}
-}
-
-@media (max-width:1200px) {
-	#section03 {
-		width: 100%;
-	}
-	.introbox1 {
-		margin-left: -30px;
-	}
-	.introbox2 {
-		margin-left: -30px;
-	}
-	/* section03 end */
-}
-
-@media (max-width:1175px) {
-	#section03 {
-		width: 100%;
-	}
-	.img_wrap {
-		margin: 20px;
-	}
-	.img_wrap img {
-		width: 330px;
-		height: 330px;
-	}
-	.box-txt {
-		width: 330px;
-		height: 330px;
-	}
-	.introbox1 {
-		margin-left: 16px;
-	}
-	.introbox2 {
-		margin-left: 16px;
-	}
-	/* section03 end */
-	
-	#section04 {
-		width: 100%;
-	}
-}
-
-@media (max-width:1000px) {
-	.img_wrap img {
-		width: 300px;
-		height: 300px;
-	}
-	.box-txt {
-		width: 300px;
-		height: 300px;
-	}
-	.introbox1 {
-		margin-left: -10px;
-	}
-	.introbox2 {
-		margin-left: -10px;
-	}
-	/* section03 end */
-}
-
-@media (max-width:900px) {
-	.img_wrap img {
-		width: 250px;
-		height: 250px;
-	}
-	.box-txt {
-		width: 250px;
-		height: 250px;
-	}
-	.img_txt {
-		position: relative;
-		top:30px;
-		font-size: 15px;
-	}
-	.img_txt span {
-		position: relative;
-		top:50px;
-		font-size: 20px;
-	}
-	.introbox1 {
-		margin-left: -10px;
-	}
-	.introbox2 {
-		margin-left: -10px;
-	}
-	/* section03 end */
-}
-
-@media (max-width:830px) {
-	#section02 {
-		width: 100%;
-		padding: 0;
-	}
-	.col-warp {
-		flex-direction: column;
-		width: 100%;
-	}
-	.sec02-img {
-		width: 70%;
-		margin: 0 auto;
-		padding-top: 5%;
-		padding-left: 0;
-	}
-	.sec02-txt {
-		width: 100%;
-		text-align: center;
-		padding: 450px 0 0 0;
-	}
-	.intro-main {
-		position: relative;
-		top: 30px;
-		font-size:26px;;
-	}
-	.intro-sub {
-		font-size: 18px;
-		margin-top: 70px;
-		margin-bottom: 50px;
+@media (min-width: 415px) {
+    .mobile-container {
+        display: none;
     }
-	/* section02 end */
-
-	#section03 {
-		padding-bottom: 5%;
-	}
-	.img_wrap img {
-		width: 500px;
-		height: 500px;
-	}
-	.img_wrap {
-		margin-top: 5%;
-		margin-bottom: 15%;
-		margin-left: 170px;
-	}
-	.box-txt {
-		width: 500px;
-		height: 500px;
-	}
-	.img_txt {
-		position: relative;
-		top:100px;
-		font-size: 25px;
-	}
-	.img_txt span {
-		position: relative;
-		top:100px;
-		font-size: 32px;
-	}
-	.introbox1 {
-		flex-direction: column;
-	}
-	.introbox2 {
-		flex-direction: column;
-	}
-	/* section03 end */
-
-	#section04 {
-		width: 100%;
-	}
-	/* section04 end */
 }
 
-@media (max-width:767px) {
-	.logo img {
-		margin: 15px 0 0 25px;
-	}
-	.navi li {
-		margin-right: 55px;
-	}
-	/* section01 end */
-
-	#section03 {
-		padding-bottom: 10%;
-	}
-	.container {
-		width: 100%;
-		background: url(../images/container.jpg);
-		background-position: center top;
-		background-repeat: no-repeat;
-	}
-	.img_wrap {
-		margin-top: 5%;
-		margin-bottom: 15%;
-		margin-left: 140px;
-	}
-}
-
-@media (max-width:630px) {
-	.logo img {
-		margin: 15px 0 0 25px;
-	}
-	.navi li {
-		margin-right: 35px;
-	}
-	/* section01 end */
-
-	.sec02-txt {
-		width: 100%;
-		text-align: center;
-		padding: 350px 0 0 0;
-	}
-	/* section02 end */
-
-	#section03 {
-		padding-bottom: 5%;
-	}
-	.sec03-txt h1 {
-		font-size:40px
-	}
-	.img_wrap img {
-		width: 450px;
-		height: 450px;
-	}
-	.img_wrap {
-		margin-top: 5%;
-		margin-bottom: 15%;
-		margin-left: 14%;
-	}
-	.box-txt {
-		width: 450px;
-		height: 450px;
-	}
-	.img_txt {
-		position: relative;
-		top:130px;
-		font-size: 20px;
-	}
-	.img_txt span {
-		position: relative;
-		top:120px;
-		font-size: 30px;
-	}
-	/* section03 end */
-}
-
-@media (max-width:510px) {
-	.logo img {
-		display: none;
-	}
-	/* section01 end */
-	.sec02-img {
-		width: 90%;
-	}
-	.sec02-txt {
-		width: 100%;
-		text-align: center;
-		padding: 350px 0 0 0;
-	}
-	/* section02 end */
-
-	#section03 {
-		padding-bottom: 5%;
-	}
-	.sec03-txt h1 {
-		font-size:30px
-	}
-	.img_wrap img {
-		width: 400px;
-		height: 400px;
-	}
-	.img_wrap {
-		margin-top: 5%;
-		margin-bottom: 15%;
-		margin-left: 11.5%;
-	}
-	.box-txt {
-		width: 400px;
-		height: 400px;
-	}
-	.img_txt {
-		position: relative;
-		top:100px;
-		font-size: 20px;
-	}
-	.img_txt span {
-		position: relative;
-		top:100px;
-		font-size: 30px;
-	}
-	/* section03 end */
-
-	#section04 h1 {
-		font-size: 35px;
-	}
-	/* section04 end */
-
-	#section05 {
-		width: 100%;
-	}
-	#section05 h2 {
-		font-size: 35px;
-	}
-	#map {
-		width:90%;
-		height: 300px;
-		position: relative;
-		border: 1px solid rgb(180, 180, 180);
-	}
-	.sec05-txt {
-		width: 100%;
-		text-align: center;
-		position: relative;
-		right: 0;
-	}
-	.map_txt h3 {
-		color: #000;
-		font-size:20px;
-		font-weight: bold;
-		font-family: 'S-CoreDream-2ExtraLight';
-		margin-top: 40px;
-	}
-	
-	.map_txt p {
-		font-family: 'S-CoreDream-2ExtraLight';
-		font-size: 17px;
-		color: #222;
-		margin-top: 30px;
-		line-height: 30px;
-	}
-	/* section 05 end */
-}
-
-@media (max-width:450px) {
-	.navi li {
-		margin-right: 25px;
-	}
-	/* section01 end */
-
-	#section03 {
-		padding-bottom: 5%;
-	}
-	.sec03-txt h1 {
-		font-size:30px
-	}
-	.img_wrap img {
-		width: 350px;
-		height: 350px;
-	}
-	.img_wrap {
-		margin-top: 5%;
-		margin-bottom: 5%;
-		margin-left: 13%;
-	}
-	.box-txt {
-		width: 350px;
-		height: 350px;
-	}
-	.img_txt {
-		position: relative;
-		top:80px;
-		font-size: 18px;
-	}
-	.img_txt span {
-		position: relative;
-		top:80px;
-		font-size: 25px;
-	}
-	/* section03 end */
-}
-
-@media (max-width:414px) {
-	.navi li {
-		margin-top: 45px;
-		margin-right: 20px;
-	}
-	.navi li a {
-		font-size: 14px;
-	}
-	.navi a {
-		display: none;
-	}
-	.btn {
-		display: block;
-		background: none;
-		border: none;
-	}
-    #section01 {
-		width: 100%;
-		height: 800px;
-	}
-	.sub-txt {
-		width: 100%;
-		font-size:21px;
-		position: relative;
-		bottom:30px;
-	}
-	.main-txt {
-		position: relative;
-		bottom:400px;
-	}
-	/* section01 end */
-
-	#section03 {
-		padding-bottom: 5%;
-	}
-	.container {
-		width: 100%;
-		background: url(../images/container.jpg);
-		background-position: center top;
-		background-repeat: no-repeat;
-	}
-	.sec03-txt h1 {
-		font-size:25px
-	}
-	.img_wrap img {
-		width: 350px;
-		height: 350px;
-	}
-	.img_wrap {
-		margin-top: 5%;
-		margin-bottom: 5%;
-		margin-left: 10.5%;
-	}
-	.box-txt {
-		width: 350px;
-		height: 350px;
-	}
-	.img_txt {
-		position: relative;
-		top:80px;
-		font-size: 18px;
-	}
-	.img_txt span {
-		position: relative;
-		top:80px;
-		font-size: 25px;
-	}
-	/* section03 end */
+@media (max-width: 500px) {
+    #section1 {
+        width: 100%;
+        height: 100vh;
+        background: url(../images/main_2.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-attachment: fixed;
+    }
+    .menu_box {
+        display: none;
+    }
+    .mobile-container {
+        display: block;
+    }
+    #section2 {
+        display: none;
+    }
 }
