--- a/css/style.css
+++ b/css/style.css
@@ -730,7 +730,7 @@
 	#section01 {
 		width: 100%;
 		height: 800px;
-		background: url(../images/main_2.jpg);
+		background: url(../images/main_1.jpg);
 		background-position: center top;
 		background-repeat: no-repeat;
 	}
@@ -856,10 +856,10 @@
     #section1 {
         width: 100%;
         height: auto;
-        background: url(../images/main_2.jpg);
+        background: url(../images/main_1.jpg);
         background-size: cover;
         background-repeat: no-repeat;
-        background-position: bottom;
+        background-position: center;
 	}
 	.navi {
 		margin-right: 6%;
